--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
 		"prettier": "3.5.3",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@popperjs/core": "^2.11.8"
 	}
 }
