--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
+		"@types/node": "^22.13.13",
+		"@typescript-eslint/eslint-plugin": "^8.27.0",
+		"@typescript-eslint/parser": "^8.27.0",
+		"builtin-modules": "^5.0.0",
 		"esbuild": "^0.25.1",
 		"obsidian": "latest",
-		"prettier": "3.5.3",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"prettier": "^3.5.3",
+		"tslib": "^2.8.1",
+		"typescript": "^5.8.2"
 	},
 	"dependencies": {
 		"@popperjs/core": "^2.11.8"
